--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,23 @@ header nav > div{
 header nav ul{
     display: flex;
     gap: 10px;
-    
+
+}
+
+
+main{
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+
 }
