--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,56 @@ header nav > div ul a{
     color: white;
 }
 
-main{
+.jumbotron{
     background-color: #B4D0E7;
+    padding: 20px 0;
+}
+
+.jumbotron h1{
+    font-size: 3rem;
+    margin-bottom: 20px;
+
+}
+
+.container-90{
+    width: 90%;
+    margin: 0 auto;
+
+}
+
+.jumbotron__info{
+    display: flex;
+    align-items: flex-start;
+}
+
+.jumbotron__text{
+    flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+.jumbotron__text a{
+    width: 80%;
+}
+
+.jumbotron__text1{
+    font-size: 3rem;
+
+}
+
+
+
+.jumbotron__img{
+    flex-basis: 70%;
+}
+
+.jumbotron__img img{
+    width: 100%;
+}
+
+main{
     display: flex;
     justify-content: center;
     align-items: center;
