--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ header nav > div ul a{
 
 .business-plan__card--top{
     text-align: center;
+    border-bottom: 1px solid lightgray;
 }
 
 .business-plan__card--top,
@@ -154,10 +155,81 @@ header nav > div ul a{
     gap: 10px;
 }
 
-.business-plan__card--botton{
-    width: 90%;
-    border: 1px solid lightslategray;
+.business-plan__card--botton hr{
+    width: 30%;
+    border: 1px solid lightgray;
 }
+
+.business-plan__card--botton ul li{
+    text-indent: -0.5rem;
+    margin-left: 1rem;
+}
+
+.business-plan__card--botton ul li i{
+    margin-right: 10px;
+
+}
+
+.business-plan__card:last-child .business-plan__card--botton{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.business-plan__card--botton--60, .dropbox-partner--60{
+    flex-basis: 60%;
+}
+
+.business-plan__card--botton--40, .dropbox-partner--40{
+    flex-basis: 40%;
+
+}
+
+.business-plan__card--botton .btn{
+    text-align: center;
+}
+
+#dropbox-partner{
+    margin-top: 20px;
+
+}
+
+#dropbox-partner > div{
+    display: flex;
+    gap: 10px;
+}
+
+#dropbox-partner figure img{
+    width: 100%;
+}
+
+.dropbox-partner--40{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+
+}
+
+#operazioni-dropbox figure img{
+    width: 100%;
+}
+
+.operazioni-dropbox__cards{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.operazioni-dropbox__card{
+    flex-basis: calc(100% / 3 - 10px);
+}
+
+
+
+
+/* nota per il futuro: se tolgo i link di reset e debug si può apprezzare di più il lavoro svolto*/
 
 
 /*main{
@@ -174,13 +246,22 @@ header nav > div ul a{
 }*/
 
 
-section .container{
+/*section .container{
     display: flex;
     justify-content: space-between;
-}
+}*/
 
 footer{
     background-color: black;
+    color: white;
 }
+
+footer > div{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap:10px
+}
+
 
 
